; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/commands/extr_variable.c_check_transaction_deferrable.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/commands/extr_variable.c_check_transaction_deferrable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ERRCODE_ACTIVE_SQL_TRANSACTION = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [74 x i8] c"SET TRANSACTION [NOT] DEFERRABLE cannot be called within a subtransaction\00", align 1
@FirstSnapshotSet = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [65 x i8] c"SET TRANSACTION [NOT] DEFERRABLE must be called before any query\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @check_transaction_deferrable(i32* %0, i8** %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i8**, align 8
  %7 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i8** %1, i8*** %6, align 8
  store i32 %2, i32* %7, align 4
  %8 = call i64 (...) @IsSubTransaction()
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %14

10:                                               ; preds = %3
  %11 = load i32, i32* @ERRCODE_ACTIVE_SQL_TRANSACTION, align 4
  %12 = call i32 @GUC_check_errcode(i32 %11)
  %13 = call i32 @GUC_check_errmsg(i8* getelementptr inbounds ([74 x i8], [74 x i8]* @.str, i64 0, i64 0))
  store i32 0, i32* %4, align 4
  br label %22

14:                                               ; preds = %3
  %15 = load i64, i64* @FirstSnapshotSet, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %21

17:                                               ; preds = %14
  %18 = load i32, i32* @ERRCODE_ACTIVE_SQL_TRANSACTION, align 4
  %19 = call i32 @GUC_check_errcode(i32 %18)
  %20 = call i32 @GUC_check_errmsg(i8* getelementptr inbounds ([65 x i8], [65 x i8]* @.str.1, i64 0, i64 0))
  store i32 0, i32* %4, align 4
  br label %22

21:                                               ; preds = %14
  store i32 1, i32* %4, align 4
  br label %22

22:                                               ; preds = %21, %17, %10
  %23 = load i32, i32* %4, align 4
  ret i32 %23
}

declare dso_local i64 @IsSubTransaction(...) #1

declare dso_local i32 @GUC_check_errcode(i32) #1

declare dso_local i32 @GUC_check_errmsg(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
